--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,6 @@
-name: Sex
+name: magicplugin
 main: yejunho10.magicplugin.GUIPlugin
 version: '${version}'
 description: This Plugin is For Feather Server. ALL RIGHTS RESERVED.
 auther: [ yejunho10 ]
 api-version: 1.19
-
-commands:
