--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,10 @@
 name: MagicPlugin
-main: AMD_5900X.MagiCPlugin
+main: kr.feathers.MagicPlugin
 version: 1.0
 description: ALL RIGHTS RESERVED.
 author: AMD_5900X
 api-version: 1.19
+
+commands:
+  mp:
+    description: MagicPlugin Command
