--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,7 @@ dependencies {
     compileOnly 'org.spigotmc:spigot-api:R0.1:1.19'
     compileOnly 'org.bukkit.craftbukkit:craftbukkit:R0.1:1.19'
 }
+
+compileJava {
+    options.encoding = "UTF-8"
+}
