--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ version = '0.6-Dev'
 
 repositories {
     mavenCentral()
-    jcenter()
     maven {
         url = 'http://dpp.dpnw.site:8081/repository/maven-public/'
         allowInsecureProtocol = true
@@ -34,4 +33,8 @@ java {
 
 compileJava {
     options.encoding = "UTF-8"
+}
+
+jar {
+    finalizedBy shadowJar
 }
