--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -34,10 +34,10 @@ VerifiedRoleID: "YOUR_ROLE_ID"
 ## <- ChaySync Settings -> ##
 ChatSync:
   message: "%player% » %message%"   #[ you can use %player% / %message%]#
-  joinMessage: "%player% joined the server!"  #[ you can use %player% ]#
-  quitMessage: "%player% left the server!"  #[ you can use %player% ]#
-  goalAdvancementMessage: "%player% has made the advancement: %advancement_name%!"  #[ you can use %player% / %advancement_name% ]#
-  playerDeathMessage: "%player% has died: %cause%"  #[ you can use %player%, %cause% ]#
+  joinMessage: "**%player%** joined the server!"  #[ you can use %player% ]#
+  quitMessage: "**%player%** left the server!"  #[ you can use %player% ]#
+  goalAdvancementMessage: "**%player%** has made the advancement: **%advancement_name%**!"  #[ you can use %player% / %advancement_name% ]#
+  playerDeathMessage: "%cause%"  #[ you can use %player%, %cause% ]#
   messageReceivedFromDiscord: "§b[§6Discord§b] §7%user_name% » %message%"  #[ you can use %user_name% / %message% ]#
 
 ## [ <-- By AMD_5900X -->] ##
