--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,5 +46,5 @@ jobs:
           title: "Release #${{ env.RELEASE_VERSION }}"
           automatic_release_tag: "${{ env.RELEASE_VERSION }}"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: build/libs
+          files: output/
           prerelease: false
