--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Execute Gradle build
         run: ./gradlew build
 
+      - name: correct release jar
+        run: ./gradlew copyJar
+
       - name: Run read-yaml action
         id: yaml-data
         uses: KJ002/read-yaml@main      # You may wish to replace main with a version tag such as '1.6' etc.
