--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,6 +33,9 @@ jobs:
       - name: correct release jar
         run: ./gradlew copyJar
 
+      - name: Execute Gradle build-Re
+        run: ./gradlew build
+
       - name: Run read-yaml action
         id: yaml-data
         uses: KJ002/read-yaml@main      # You may wish to replace main with a version tag such as '1.6' etc.
