--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation 'org.jetbrains:annotations:23.0.0'
 
     compileOnly 'org.spigotmc:spigot-api:R0.1:1.19'
-    compileOnly 'io.papermc.paper:paper-api:1.19-R0.1-SNAPSHOT'
+    compileOnly 'org.bukkit.craftbukkit:craftbukkit:R0.1:1.19'
 
     api 'net.dv8tion:JDA:5.0.0-alpha.12'
 }
