--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
-name: MagicPlugin
+name: EssentialsM
 main: kr.feathers.mc.MagicPluginMain
-version: 1.0
+version: 1.2
 description: ALL RIGHTS RESERVED.
-author: AMD_5900X
+authors: [ AMD_5900X, LICKER2689, Bruce0203 ]
 api-version: 1.19
 
 commands:
   mp:
-    description: MagicPlugin Command
+    description: EssentialsM Command
