--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -21,10 +21,10 @@
 
 
 #+---------------------------------------------------Minecraft Settings----------------------------------------------------+#
-LogPrefix: "§l§6|§7§rMP§6|§r"
+LogPrefix: "§7§l|§r§6MP§r§7§l|§r"
 
 #+--------CustomJoinQuitMessage--------+#
-#|       [ you can use %player% ]      |#
+#|            [ %player% ]             |#
 #+-------------------------------------+#
 Join:
   enable: true
@@ -40,13 +40,14 @@ AFK:
   enable: true
   time: 60 #[ seconds ]#
   message: "§9[§aAFK§9] §7%player%, You are §cAFK §7now."
+  disable_message: "§9[§aAFK§9] §7%player%, You are §cnot §7AFK now."
   teleport:
     enable: true
     location:
       world: "world"
-      x: 0
+      x: 0.5
       y: 64
-      z: 0
+      z: 0.5
 
 #+-----------CustomShopList------------+#
 #| you need to generate other yml file |#
@@ -56,15 +57,22 @@ Shop:
   shops:
     - "example_shop.yml"
 
+#+------------ChatChannel--------------+#
+# |   [ %id%, %message%, %player% ]    |#
+#+-------------------------------------+#
+ChatChannel:
+  enable: true
+  message: "§9[§a%id% Channel§9] §7<%player%> §f%message%"
+
 #+--------------------------------------------------Discord Bot Settings---------------------------------------------------+#
 BotToken: "YOUR_BOT_TOKEN"
-BotCommandPrefix: "!"
 BotStatus:
   richPresence: "FEATHER ANARCHY"
   status: "online" #[ "online", "idle", "dnd", "invisible", "offline" ]#
 
 #+--------EnableDiscordCommand---------+#
 VerifyCommandEnabled: false
+StatusCommandEnabled: true
 
 #+-------------Channel ID--------------+#
 VerifyChannelID: "YOUR_CHANNEL_ID"
